# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: .gitignore  README.md  main.py  pyproject.toml  test_automation.py  test_grounding.py  test_key.py  test_popup.py
automated/: test_post_1.txt  test_post_2.txt
automated/tjm-project/: post_1.txt  post_10.txt  post_2.txt  post_3.txt  post_4.txt  post_5.txt  post_6.txt  post_7.txt  post_8.txt  post_9.txt
src/: api_client.py  automation.py  grounding.py  template_grounding.py
test/: open_popup.py  test_automation.py  test_grounding.py  test_key.py  test_template_grounding.py
