[project]
name = "desktop-automation"
version = "0.1.0"
description = "Vision-based desktop automation with two-stage VLM grounding"
requires-python = ">=3.11"
dependencies = [
    "groq",
    "pyautogui",
    "pillow",
    "requests",
    "pywin32",
]

[project.scripts]
automate = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
